--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -32,3 +32,22 @@
     text-decoration: none;
     text-shadow: none;
 }
+
+element.style {
+    text-align: left;
+    width: none;
+}
+
+.qq-upload-list {
+    text-align: left;
+}
+/* For the bootstrapped demos */
+li.alert-success {
+    background-color: #DFF0D8;
+}
+li.alert-error {
+    background-color: #F2DEDE;
+}
+.alert-error .qq-upload-failed-text {
+    display: inline;
+}
