--- a/app/views/me/notes/show.html.erb
+++ b/app/views/me/notes/show.html.erb
@@ -1,6 +1,6 @@
-<p id="notice"><%= notice %></p>
 <div class='left'>
-
+  <%= render 'users/profile' %>
+  <%= render 'me/menu' %>
 </div>
 <div class='right'>
   <%= render 'me/posts/nav' %>
