--- a/app/views/me/posts/index.html.erb
+++ b/app/views/me/posts/index.html.erb
@@ -3,13 +3,11 @@
   <%= render 'me/menu' %>
 </div>
 <div class='right'>
+
   <%= render 'me/posts/nav' %>
-  <div id='user-page-post-list'>
-    <div class='left'>
-    </div>
 
-    <div class='right'>
-    </div>
-
+  <div class="post-list">
+    <%= render @posts %>
   </div>
+
 </div>
