--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -16,17 +16,13 @@ body{
     background-repeat: repeat;
     position: relative;
     background-color: #DEDDE3;
+    padding-top: 50px; 
 }
 
 
 .simple_form textarea {
     height: 100px;
     width: 490px;
-}
-
-body{
-
-    padding-top: 50px;  
 }
 
 .left {
@@ -45,6 +41,11 @@ body{
 .brand h2{
     color:#01BDBC;
 }
+.navbar .brand {
+    color: #777777;
+    padding: 5px 20px;
+    text-shadow: null;
+}
 
 .page {
     background-color: #F6F6F6;
@@ -52,11 +53,8 @@ body{
     border-bottom: 1px solid #8A94A0;
     border-radius: 5px 5px 0 0;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.11);
-    display: table;
-    margin: 0;
-    padding: 10px;
-    width: 100%;
     min-height: 520px;
+    width: 960px;
 }
 
 #user_menus{
@@ -68,6 +66,12 @@ body{
     width: 166px;
 }
 
+.nav-list > .active > a, .nav-list > .active > a:hover {
+    background-color: #eee;
+    color: #333;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+}
+
 .affix {
     position: fixed;
 }
@@ -77,7 +81,7 @@ body{
     display: block;
     margin: 0 0 -1px;
     padding: 8px 14px;
-    color: #2D963D;
+    color: #005580;
 }
 
 #user_menus > li > a > i.right{
@@ -136,7 +140,7 @@ h4{
 
 .products a:visited {
     color: #333;
-    TEXT-DECORATION: none;
+    text-decoration: none;
 }
 
 .products a:hover {
