--- a/app/views/me/albums/_form.html.erb
+++ b/app/views/me/albums/_form.html.erb
@@ -1,5 +1,6 @@
 <div>
-  <%= simple_form_for @post, :url => me_documents_path, :validate => true, :html => {:class => 'form-horizontal'} do |form| %>
+  <%= simple_form_for @post, :url => me_albums_path, :validate => true, :html => {:class => 'form-horizontal'} do |form| %>
+    <%= render 'assets/fileupload' %>
     <%= form.input :title, :validate => {:presence => true} %>
     <%= form.hidden_field :kind, value: "album" %>
     <%= form.input :body, :input_html => {:maxlength => 15, :size => 40, :height => 30} %>
