--- a/app/views/me/albums/new.html.erb
+++ b/app/views/me/albums/new.html.erb
@@ -1,5 +1,8 @@
 <div class='left'>
+  <%= render 'me/menu' %>
+  <%# render "assets/fileupload" %>
+</div>
+<div class='right'>
   <%= render 'me/posts/nav' %>
   <%= render 'form' %>
-  <%= render "assets/fileupload" %>
 </div>
