--- a/app/views/me/posts/new.html.erb
+++ b/app/views/me/posts/new.html.erb
@@ -1,4 +1,8 @@
-<%= render 'nav' %>
-
-<%= render "me/posts/forms/#{@kind}" %>
-
+<div class='left'>
+  <%= render 'users/profile' %>
+  <%= render 'me/menu' %>
+</div>
+<div class='right'>
+  <%= render 'me/posts/nav' %>
+  <%= render 'form' %>
+</div>
