--- a/app/views/me/posts/show.html.erb
+++ b/app/views/me/posts/show.html.erb
@@ -1,4 +1,11 @@
-<%= render 'nav' %>
-
-<%= render "me/posts/views/#{@post.kind}" %>
-
+<div class='left'>
+  <%= render 'users/profile' %>
+  <%= render 'me/menu' %>
+</div>
+<div class='right'>
+  <%= render 'me/posts/nav' %>
+  <h3><%= @post.title%></h3>
+  <p>
+   <%= @post.body %>
+  </p>
+</div>
