--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
-<div class='span2'>
+<div id='page-right'>
 	<%= render 'users/profile' %>
 	<%= render 'users/menu' %>
 </div>
 
-<div class='span10'>
+<div id='page-left'>
 	<div class="tabbable"> 
 		<%= render 'activities/nav' %>
 		<%= render 'activities/list' %>
