--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -33,21 +33,8 @@
     text-shadow: none;
 }
 
-element.style {
-    text-align: left;
-    width: none;
-}
-
-.qq-upload-list {
-    text-align: left;
-}
-/* For the bootstrapped demos */
-li.alert-success {
-    background-color: #DFF0D8;
-}
-li.alert-error {
-    background-color: #F2DEDE;
-}
-.alert-error .qq-upload-failed-text {
-    display: inline;
+@media (min-width: 1000px) {    
+    .span12, .container {   
+    width: 960px;   
+    }
 }
