--- a/app/views/me/folders/show.html.erb
+++ b/app/views/me/folders/show.html.erb
@@ -4,8 +4,23 @@
 </div>
 <div class='right'>
 
-  <%= render 'me/posts/nav' %>
+  <%= render 'me/media/nav' %>
 
   <%= @folder.name %>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>LOGO</th>
+        <th>名称</th>
+        <th>当前版本</th>  
+        <th>文件大小</th>
+        <th>下载地址</th>
+        <th>备注</th>
+        <th>操作</th>
+      </tr>
+    </thead>
+    <%= render @media, partial: 'me/media/medium' %>
 
 </div>
