--- a/app/views/me/media/index.html.erb
+++ b/app/views/me/media/index.html.erb
@@ -3,11 +3,7 @@
   <%= render 'me/menu' %>
 </div>
 <div class='right'>
-  <%= render 'me/posts/nav' %>
-
-  <div class='content'>
-    <%= link_to '添加文件', new_me_medium_path, :class => 'btn btn-success pull-right' %>
-  </div>
+  <%= render 'nav' %>
   <table class="table">
     <thead>
       <tr>
