--- a/app/views/me/media/new.html.erb
+++ b/app/views/me/media/new.html.erb
@@ -3,6 +3,6 @@
   <%# render "assets/fileupload" %>
 </div>
 <div class='right'>
-  <%= render 'me/posts/nav' %>
+  <%= render 'nav' %>
   <%= render 'form' %>
 </div>
