--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -3,6 +3,10 @@
     line-height: 22px;
 }
 
+.meta{
+    line-height: 30px;
+}
+
 .meta ul{
     list-style: none;
     margin: 0px;
@@ -12,6 +16,12 @@
     color: #666;
     font-size: 9pt;
 }
+
+.meta li{
+    float: left;
+    margin-right: 7px;
+}
+
 .archive-month .tags
 {
     color: #bbbbbb;
