--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
           <%= yield %>
         </div>
     </div> <!-- /container -->
-    <div class="container">
+    <div class="container clearfix content">
       <footer>
         <p>&copy; haobanji.com 2013</p>
       </footer>
