--- a/app/views/me/folders/index.html.erb
+++ b/app/views/me/folders/index.html.erb
@@ -1,21 +1,26 @@
-<h1>Listing me_documents</h1>
+<div class='left'>
+  <%= render 'users/profile' %>
+  <%= render 'me/menu' %>
+</div>
+<div class='right'>
+  <%= render 'nav' %>
 
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @me_documents.each do |me_document| %>
-  <tr>
-    <td><%= link_to 'Show', me_document %></td>
-    <td><%= link_to 'Edit', edit_me_document_path(me_document) %></td>
-    <td><%= link_to 'Destroy', me_document, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Document', new_me_document_path %>
+  <div class='content'>
+    <%= link_to '添加文件', new_me_medium_path, :class => 'btn btn-success pull-right' %>
+  </div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>LOGO</th>
+        <th>名称</th>
+        <th>当前版本</th>  
+        <th>文件大小</th>
+        <th>下载地址</th>
+        <th>备注</th>
+        <th>操作</th>
+      </tr>
+    </thead>
+    <%= render @media %>
+  </table>
+</div>
