--- a/app/views/me/media/_form.html.erb
+++ b/app/views/me/media/_form.html.erb
@@ -1,3 +1,48 @@
+<%= javascript_include_tag "jquery-fileupload" %>
+<div class='content'>
+  <%= form_for [:me, @medium], :html => { :multipart => true, :id => "fileupload"  } do |f| %>
+    <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
+    <div class="row fileupload-buttonbar">
+      <div class="span7">
+        <!-- The fileinput-button span is used to style the file input field as button -->
+        <span class="btn btn-success fileinput-button">
+          <i class="icon-plus icon-white"></i>
+          <span>Add files...</span>
+          <%= f.file_field :file %>
+        </span>
+        <button type="submit" class="btn btn-primary start">
+          <i class="icon-upload icon-white"></i>
+          <span>Start upload</span>
+        </button>
+        <button type="reset" class="btn btn-warning cancel">
+          <i class="icon-ban-circle icon-white"></i>
+          <span>Cancel upload</span>
+        </button>
+        <button type="button" class="btn btn-danger delete">
+          <i class="icon-trash icon-white"></i>
+          <span>Delete</span>
+        </button>
+        <input type="checkbox" class="toggle">
+      </div>
+      <div class="span5">
+        <!-- The global progress bar -->
+        <div class="progress progress-success progress-striped active fade">
+          <div class="bar" style="width:0%;"></div>
+        </div>
+      </div>
+    </div>
+    <!-- The loading indicator is shown during image processing -->
+    <div class="fileupload-loading"></div>
+    <br>
+    <!-- The table listing the files available for upload/download -->
+    <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
+    </table>
+  <% end %>
+</div>
+<div class='content'>
+  <%= render 'me/shared/file_upload' %>
+</div>
+
 <%= simple_form_for [:me, @medium], :validate => true, :html => {:class => 'form-horizontal'} do |f| %>
   <%= f.association :folder, as: :select, collection: nested_set_options(current_user.folders, nil) {|i| "#{' - ' * i.level} #{i.name}" }, label: '目录', prompt: '请选择' %>    
   <%= f.button :submit %>
