--- a/app/views/me/media/_nav.html.erb
+++ b/app/views/me/media/_nav.html.erb
@@ -1,27 +1,6 @@
-<%= tabs_tag(:namespace => :post_nav, :open_tabs => { :id => "post_nav", :class => "nav nav-tabs" }, :builder => MenuTabBuilder) do |tab| %>
-  <li class="dropdown">
-    <%= link_to raw("所有分享 <b class='caret'></b>"), '#', class: 'dropdown-toggle', 'data-toggle' => 'dropdown' %>
-    <ul class="dropdown-menu">
-      <li> <%= link_to "笔记", me_notes_path %> </li>
-      <li> <%= link_to "书签", me_links_path %> </li>
-      <li> <%= link_to "相册", me_albums_path %> </li>
-      <li> <%= link_to "文档", me_documents_path %> </li>
-      <li> <%= link_to "视频", me_videos_path %> </li>
-      <li> <%= link_to "音频", me_audios_path %> </li>
-   </ul>
- </li>
-  
-  <%= tab.category raw("分类管理"), manage_me_categories_path %>
-
-  <li class="dropdown">
-    <%= link_to raw("创建 <b class='caret'></b>"), '#', class: 'dropdown-toggle', 'data-toggle' => 'dropdown' %>
-    <ul class="dropdown-menu">
-      <li> <%= link_to "新建笔记", new_me_note_path %> </li>
-      <li> <%= link_to "新建书签", new_me_link_path %> </li>
-      <li> <%= link_to "新建相册", new_me_album_path %> </li>
-      <li> <%= link_to "新建文档", new_me_document_path %> </li>
-      <li> <%= link_to "新建视频", new_me_video_path %> </li>
-      <li> <%= link_to "新建音频", new_me_audio_path %> </li>
-   </ul>
-  </li>
+<%= tabs_tag(:namespace => :media_nav, :open_tabs => { :id => "post_nav", :class => "nav nav-tabs" }, :builder => MenuTabBuilder) do |tab| %>
+  <%= tab.media raw("我的文件"), me_media_path %>
+  <%= tab.folder raw("目录管理"), manage_me_folders_path %>
+  <%= link_to "添加目录", new_me_folder_path, class: "btn btn-info pull-right span", remote: true, data: {type: "script"} %>
+  <%= link_to '添加文件', new_me_medium_path, :class => 'btn btn-success pull-right span' %>
 <% end %>
