--- a/app/views/me/posts/_meta.html.erb
+++ b/app/views/me/posts/_meta.html.erb
@@ -1,8 +1,5 @@
 <div class="meta">
   <ul>
-    <%- if current_user and post.belongs?(current_user) %>
-      <li class="comments"><%= link_to "编辑", edit_post_path(post) %></li>
-    <% end -%>
     <li class="comments"> 浏览(<%= post.readings_count %>)</li>
     <li class="comments"> 评论(<%= post.comments_count %>)</li>
 
@@ -11,4 +8,7 @@
       <li class="tags"><%= linked_tag_list(post.tags) %></li>
     <% end -%>
   </ul>
+  <%- if current_user and post.belongs?(current_user) %>
+    <div class="pull-right"><%= link_to "编辑", edit_me_post_path(post) %></div>
+  <% end -%>
 </div>
