--- a/app/views/me/posts/_nav.html.erb
+++ b/app/views/me/posts/_nav.html.erb
@@ -1,18 +1,8 @@
 <%= tabs_tag(:namespace => :post_nav, :open_tabs => { :id => "post_nav", :class => "nav nav-tabs" }, :builder => MenuTabBuilder) do |tab| %>
-  <li class="dropdown">
-    <%= link_to raw("所有分享 <b class='caret'></b>"), '#', class: 'dropdown-toggle', 'data-toggle' => 'dropdown' %>
-    <ul class="dropdown-menu">
-      <li> <%= link_to "笔记", me_notes_path %> </li>
-      <li> <%= link_to "书签", me_links_path %> </li>
-      <li> <%= link_to "相册", me_albums_path %> </li>
-      <li> <%= link_to "文档", me_documents_path %> </li>
-      <li> <%= link_to "视频", me_videos_path %> </li>
-      <li> <%= link_to "音频", me_audios_path %> </li>
-   </ul>
- </li>
-  
+  <%= tab.post raw("我的纪录"), me_posts_path %>
   <%= tab.category raw("分类管理"), manage_me_post_categories_path %>
-
-  <%= tab.category raw("创建纪录"), new_me_post_path %>
+  <%= link_to "添加分类", new_me_post_category_path, class: "btn btn-info pull-right span", remote: true, data: {type: "script"} %>
+  <%= link_to '创建纪录', new_me_post_path, :class => 'btn btn-success pull-right span' %>
 
 <% end %>
+
