--- a/app/views/me/groups/new.html.erb
+++ b/app/views/me/groups/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New me_group</h1>
+<div class='left'>
+  <%= render 'users/profile' %>
+  <%= render 'me/menu' %>
+</div>
+<div class='right'>
+  <%= render 'nav' %>
+  <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', me_groups_path %>
+</div>
