--- a/app/views/groups/_nav.html.erb
+++ b/app/views/groups/_nav.html.erb
@@ -1,11 +1,9 @@
-<div class="tabbable tabs">
-  <%= tabs_tag(:namespace => :group_nav, :open_tabs => {:class => "nav nav-tabs"}, :builder => MenuTabBuilder) do |tab| %>
+<%= tabs_tag(:namespace => :group_nav, :open_tabs => {:class => "nav nav-tabs"}, :builder => MenuTabBuilder) do |tab| %>
   <%= tab.home @group.name, group_topic_path(@group) %>
   <%= tab.home raw("话题"), me_activities_path %>
   <%= tab.home raw("话题"), me_activities_path %>
   <%= tab.home raw("话题"), me_activities_path %>
   <%= tab.home raw("话题"), me_activities_path %>
   <%= tab.home raw("话题"), me_activities_path %>
-  <%= tab.new_group "创建班级", new_group_path %>
-  <% end %>
-</div>
+  <%= link_to "申请加入", apply_group_path(@group), remote: true, class: 'btn btn-info pull-right' %>
+<% end %>
