--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,8 +1,12 @@
 <div class='left'>
-	<%= render 'groups/nav' %>
+  <%= image_tag @group.logo.url(:m) %>
+  <h3><%= @group.name %></h3>
+  <p><%= @group.body %></p>
 </div>
 
 <div class='right'>
-	<%= image_tag @group.logo.url(:m) %>
+
+  <%= render 'nav' %>
+
 </div>
 
