--- a/app/views/me/groups/index.html.erb
+++ b/app/views/me/groups/index.html.erb
@@ -1,21 +1,16 @@
-<h1>Listing me_groups</h1>
+<div class='left'>
+  <%= render 'users/profile' %>
+  <%= render 'me/menu' %>
+</div>
+<div class='right'>
+  <%= render 'nav' %>
+  <div class='span-3'>
 
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  </span>
+  <div class="span-4">
+    <ul>
+      <%= render @groups %>
+    </ul>
+  </div>
 
-<% @me_groups.each do |me_group| %>
-  <tr>
-    <td><%= link_to 'Show', me_group %></td>
-    <td><%= link_to 'Edit', edit_me_group_path(me_group) %></td>
-    <td><%= link_to 'Destroy', me_group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Group', new_me_group_path %>
+</div>
