--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -19,6 +19,9 @@ body{
     padding-top: 50px; 
 }
 
+.brand img{
+    height: 40px;
+}
 
 .simple_form textarea {
     height: 100px;
@@ -56,7 +59,7 @@ body{
 }
 .navbar .brand {
     color: #777777;
-    padding: 5px 20px;
+    padding: 0px;
     text-shadow: null;
 }
 
