--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
-			<%= link_to "mage_tag('logo.png')", root_path, :class => 'brand' %>
+			<%= link_to image_tag('logo.png'), root_path, :class => 'brand' %>
 			<%= render "layouts/nav" %>	
 			<%= render "layouts/account" %>
 		</div>
