--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -41,6 +41,12 @@
     text-shadow: none;
 }
 
+a {
+    color: #1ABC9C;
+    text-decoration: none;
+    transition: none;
+}
+
 @media (min-width: 1000px) {    
     .span12, .container {   
     width: 960px;   
