--- a/app/views/layouts/group.html.erb
+++ b/app/views/layouts/group.html.erb
@@ -1,42 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= content_for?(:title) ? yield(:title) : "好班级 - 为您提供优质的学习平台" %></title>
-  <%= csrf_meta_tags %>
-  <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-      <![endif]-->
-  
-  <%= render "layouts/assets" %>
-  <%= render "layouts/links" %>
-</head>
-<body>
-  <%= render "layouts/header" %>
-  <div class="container">
-    <div id='content' class="content">
-      <%= notice_message %>
-      <div class='row'>
-	<div class='span2'>	
-	  <%= render "groups/nav" %>		
-	</div>
-	<div class='span6'>	
-	  <%= render 'groups/menu'%>
-	  <%= yield %>
-	</div>
-	<div class='span2'>	
-	  <%- if @current_group %>
-	  <%= render 'groups/profile' %>
-	  <% end %>
-	</div>
-      </div>
-    </div><!--/content-->
-    <div class='clearfix'><div>
-	<br />
-	<%= render "layouts/footer" %>
-      </div> 
-      <!-- /container -->
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "好班级 － 优质的在线学习平台" %></title>
+    <%= csrf_meta_tags %>
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+    <![endif]-->
+
+    <%= stylesheet_link_tag "application", :media => "all" %>
+    <!-- Javascripts
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <%= javascript_include_tag "application" %>
+    <!-- For third-generation iPad with high-resolution Retina display: -->
+    <!-- Size should be 144 x 144 pixels -->
+    <%= favicon_link_tag 'images/apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
+
+    <!-- For iPhone with high-resolution Retina display: -->
+    <!-- Size should be 114 x 114 pixels -->
+    <%= favicon_link_tag 'images/apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
+
+    <!-- For first- and second-generation iPad: -->
+    <!-- Size should be 72 x 72 pixels -->
+    <%= favicon_link_tag 'images/apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
+
+    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+    <!-- Size should be 57 x 57 pixels -->
+    <%= favicon_link_tag 'images/apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
+
+    <!-- For all other devices -->
+    <!-- Size should be 32 x 32 pixels -->
+    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+
+  </head>
+  <body>
+
+    <%= render "layouts/header" %>
+    <div class="page container">
+        <div class="content">
+          <%= bootstrap_flash %>
+          <div class='left'>
+            <%= image_tag avatar_url(@group) %>
+            <h3><%= @group.name %></h3>
+            <p><%= @group.body %></p>
+          </div>
+
+          <div class='right'>
+            <%= render 'group/nav' %>
+            <%= yield %>
+          </div>
+
+        </div>
+    </div> <!-- /container -->
+    <div class="container clearfix content">
+      <footer>
+        <p>&copy; haobanji.com 2013</p>
+      </footer>
+    </div>
+  </body>
 </html>
