--- a/app/views/me/settings/index.html.erb
+++ b/app/views/me/settings/index.html.erb
@@ -1,21 +1,2 @@
-<h1>Listing me_settings</h1>
-
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @me_settings.each do |me_setting| %>
-  <tr>
-    <td><%= link_to 'Show', me_setting %></td>
-    <td><%= link_to 'Edit', edit_me_setting_path(me_setting) %></td>
-    <td><%= link_to 'Destroy', me_setting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Setting', new_me_setting_path %>
+<%= render 'nav' %>
+<%= render 'form' %>
