--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,7 +1,7 @@
-<div id='profile_info' class='thumbnail'>
+<div id='profile_info' class='content'>
 	<table>
 		<tr>
-			<td><%= image_tag current_user.avatar_url(:b) %></td>
+			<td><%= image_tag avatar_url(current_user) %></td>
 		</tr>
 		<tr>
 			<td>
