--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,7 +2,7 @@
   <%= tab.index '首页', root_path %>
   <%= tab.index '分享', posts_path %>
   <%= tab.index '问答', schools_path %>
-  <%= tab.index '课程', courses_path %>
+  <%= tab.course '课程', courses_path %>
   <%= tab.index '群组', groups_path %>
   <%= tab.index '班级', groups_path %>
 <% end %>
