--- a/app/views/me/courses/_form.html.erb
+++ b/app/views/me/courses/_form.html.erb
@@ -1,17 +1,10 @@
-<%= form_for(@me_course) do |f| %>
-  <% if @me_course.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@me_course.errors.count, "error") %> prohibited this me_course from being saved:</h2>
-
-      <ul>
-      <% @me_course.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+<%= simple_form_for [:me, @course], :html => {:class => 'form-stacked'} do |f| -%> 
+  <%= f.error_notification %>
+  <%= f.input :name, :class=>'xlarge', :label => '名称' %>
+  <%= f.input :avatar, :label => '图标' %>
+  <%# f.input :kind_id, :label => t('kind'), :collection => Group.Kinds, :include_blank => false, :required => true %>
+  <%= f.input :body, label: '简介' %>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit '创建', :class=>'btn btn-primary' %>
   </div>
 <% end %>
