--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -24,6 +24,13 @@ body{
     margin-left: 20px;
 }
 
+.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
+    background-color: #D9D8DF;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.125) inset;
+    color: #555555;
+    text-decoration: none;
+}
+
 .brand img{
     height: 40px;
 }
