--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,10 +1,2 @@
-<div class='left'>
-  <%= image_tag @course.cover.url(:m) %>
-</div>
-<div class='right'>
-  <h4><%= @course.name %></h4>
-  <%= render 'nav' %>
-  <p id="notice"><%= notice %></p>
-
-
-</div>
+<%= render 'course/nav' %>
+<%= @course.body %>
