update user menu and add course admin page

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -25,9 +25,9 @@ body{
 }
 
 .navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
-    background-color: #D9D8DF;
+    background-color: #333;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.125) inset;
-    color: #555555;
+    color: #4FD687;
     text-decoration: none;
 }
 
