--- a/app/views/me/courses/index.html.erb
+++ b/app/views/me/courses/index.html.erb
@@ -1,10 +1,21 @@
 <%= render 'nav' %>
-<table class='table content'>
-  <tr>
-    <th>课程</th>
-    <th>名称</th>
-    <th>参加人数</th>
-  </tr>
-  <%= render @courses %>
-</table>
+<div class='span7'>
+  <h4>我参加的课程</h4>
+  <table class='table'>
+    <tr>
+      <th>课程</th>
+      <th>名称</th>
+      <th>参加人数</th>
+    </tr>
+    <%= render @courses %>
+  </table>
+</div>
+<div class='span2 pull-right'>
+  <h4>我创建的课程</h4>
+  <ul>
+    <%- current_user.own_courses.each do |course| %>
+      <li><%= link_to course.name, course %></li>
+    <% end %>
+  </ul>
+</div>
 
