--- a/app/views/course/sections/_form.html.erb
+++ b/app/views/course/sections/_form.html.erb
@@ -1,15 +1,19 @@
-<%= simple_form_for @section, :html => {:class => 'form-stacked'} do |f| -%> 
+<table class='table content'>
+  <thead>
+    <tr>
+      <th></th>
+      <th>名称</th>
+      <th>课时数量</th>  
+      <th>操作</th>
+    </tr>
+  </thead>
+  <tbody id='section-list'>
+    <%= render @course.sections %>
+  </tbody>
+</table>
+<%= simple_form_for @section, url: course_course_sections_path(@course), remote: true, html: {class: 'form-stacked', data: {type: "script", method: :post} } do |f| -%> 
   <%= f.error_notification %>
   <%= f.input :title, :label => '名称' %>
-  <table id="slots">
-  <%= f.fields_for :slots, :wrapper => false do |slot_form| %>
-    <tr class="fields">
-      <td><%= slot_form.text_field :name %></td>
-      </td><%= slot_form.link_to_remove "删除" %></td>
-    </tr>
-  <% end %>
-</table>
-<p><%# f.link_to_add "Add a task", :slots, :data => { :target => "#tasks" } %></p>
   <div class="actions">
     <%= f.submit '创建', :class=>'btn btn-primary' %>
   </div>
