--- a/app/views/courses/admin.html.erb
+++ b/app/views/courses/admin.html.erb
@@ -1,1 +1,6 @@
-<%= render 'form' %>
+<div class='span7'>
+  <%= render 'form' %>
+</div>
+<div class='span2 pull-right'>
+  <%= render 'course/admin_nav' %>
+</div>
