--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -52,3 +52,10 @@ a {
     width: 960px;   
     }
 }
+.footer {
+    background-color: transparent;
+    border-top: 1px solid #E5E5E5;
+    margin-top: 30px;
+    padding: 20px 0;
+    text-align: center;
+}
