--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,18 +1,19 @@
-<div id="footer" class='row'>
-	<span class="fleft gray-link" id="icp">
-		&copy; 2012－2013 haobanji.com, all rights reserved &nbsp;&nbsp;
-		<a href="http://www.miibeian.gov.cn/"></a>
-	</span>
+<footer class="footer" class='row'>
+	<div class='container'>
+		<span class="span gray-link" id="icp">
+			&copy; 2013 haobanji.com, all rights reserved &nbsp;&nbsp;
+			<a href="http://www.miibeian.gov.cn/"></a>
+		</span>
 
-	<span class="fright">
+		<span class="span pull-right">
 		· <%= link_to t('About'), page_path("about") %>
 		· <%= link_to t('FAQ'), page_path("faq") %>
 		· <%= link_to t('Help'), page_path("help") %>
 		· <%= link_to t('Feedback'), page_path("feedback") %>
 		· <%= link_to t('Contact'), page_path("contact") %>
-	</span>
-
-</div>
+		</span>
+	</div>
+</footer>
 
 <script type="text/javascript">
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
