--- a/app/views/layouts/group.html.erb
+++ b/app/views/layouts/group.html.erb
@@ -20,10 +20,6 @@
       </div>
 
     </div> <!-- /container -->
-    <div class="container clearfix content">
-      <footer>
-        <p>&copy; haobanji.com 2013</p>
-      </footer>
-    </div>
+    <%= render 'footer' %>
   </body>
 </html>
