--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,17 +1,19 @@
-<h2>注册好班级</h2>
+<div id='page-right'>
+  <h3>注册好班级</h3>
 
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true, label: '邮箱' %>
-    <%= f.input :password, :required => true, label: '密码' %>
-    <%= f.input :password_confirmation, :required => true, label: '重复密码' %>
-  </div>
-
-  <div class="form-actions">
+  <%= simple_form_for(resource, :as => resource_name, validate: true, :url => registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
+    <%= f.input :email, :autofocus => true, label: '邮箱', :validate => { :presence => true } %>
+    <%= f.input :nickname, label: '昵称', :validate => { :presence => true } %>
+    <%= f.input :password, label: '密码', :validate => { :presence => true } %>
+    <%= f.input :password_confirmation, label: '重复密码', :validate => { :presence => true } %>
     <%= f.button :submit, "注 册" %>
-  </div>
-<% end %>
+  <% end %>
+</div>
 
-<%= render "devise/shared/links" %>
+<div id='page-left'>
+  <h3>利用社交网络登录</h3>
+</div>
+
+
+
