--- a/app/views/me/categories/create.js.erb
+++ b/app/views/me/categories/create.js.erb
@@ -1,2 +1,3 @@
-$('#category-list').append("<%= escape_javascript render('category', category: @category) %>");
+$('#category-list').prepend("<%= escape_javascript render('category', category: @category) %>");
+$('#category-<%= @category.id %>').effect("highlight", {}, 2000);
 $('#category-form').trigger('reset');
