--- a/app/views/me/folders/_form.html.erb
+++ b/app/views/me/folders/_form.html.erb
@@ -1,7 +1,5 @@
 
-<%= simple_form_for @post, :url => me_documents_path, :validate => true, :html => {:class => 'form-horizontal'} do |form| %>
-  <%= form.input :title, :validate => {:presence => true} %>
-  <%= form.hidden_field :kind, value: "document" %>
-  <%= form.input :body, :input_html => {:maxlength => 15, :size => 40, :height => 30} %>
-  <%= form.button :submit %>
+<%= simple_form_for Folder.new, :url => me_folders_path, :validate => true, remote: true, :html => {:class => 'form-horizontal', id: 'folder-form', data: {type: "script", method: :post}} do |form| %>
+  <%= form.input :name, label: '名称' %>
+  <%= form.submit '创建', :class=>'btn btn-primary inline', disable_with: "正在提交..." %>
 <% end %>
