--- a/app/views/me/media/_form.html.erb
+++ b/app/views/me/media/_form.html.erb
@@ -1,6 +1,7 @@
 <%= javascript_include_tag "jquery-fileupload" %>
+
 <div class='content'>
-  <%= form_for [:me, @medium], :html => { :multipart => true, :id => "fileupload"  } do |f| %>
+  <%= form_for [:me, @folder, @medium], :html => { :multipart => true, :id => "fileupload"  } do |f| %>
     <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
     <div class="row fileupload-buttonbar">
       <div class="span7">
@@ -42,10 +43,3 @@
 <div class='content'>
   <%= render 'me/shared/file_upload' %>
 </div>
-
-<%= simple_form_for [:me, @medium], :validate => true, :html => {:class => 'form-horizontal'} do |f| %>
-  <%= f.association :folder, as: :select, collection: nested_set_options(current_user.folders, nil) {|i| "#{' - ' * i.level} #{i.name}" }, label: '目录', prompt: '请选择' %>    
-  <%= f.button :submit %>
-
-  <%= render 'me/shared/upload' %>
-<% end %>
