--- a/app/views/me/media/new.html.erb
+++ b/app/views/me/media/new.html.erb
@@ -1,8 +1,6 @@
-<div class='left'>
-  <%= render 'me/menu' %>
-  <%# render "assets/fileupload" %>
+<%= render 'nav' %>
+<div class='content clearfix'>
+  <h3 class='span'>添加文件到<%= @folder.name %></h3>
+  <%= link_to "上传完成", [:me, @folder], class: 'btn btn-info pull-right' %>
 </div>
-<div class='right'>
-  <%= render 'nav' %>
-  <%= render 'form' %>
-</div>
+<%= render 'form' %>
