--- a/app/views/me/posts/_form.html.erb
+++ b/app/views/me/posts/_form.html.erb
@@ -3,12 +3,10 @@
 	<% @post.errors.full_messages.each do |msg| %>
       <p><%= msg %></p>
     <% end %>
-    <%= f.association :post_category, as: :select, collection: nested_set_options(PostCategory, nil) {|i| "#{' - ' * i.level} #{i.name}" }, label: '分类', prompt: '请选择' %>    
-    <%= f.hidden_field :kind, value: "note" %>
-
+    <%= f.association :category, as: :select, collection: current_user.categories, label: '分类', prompt: '请选择' %>    
   	<%= f.input :title, label: '标题', :validate => {:presence => true} %>
-  	<%= f.input :body, :as => :kindeditor, :label => false, :input_html => { :width => 500, :height => 300 } %>
+  	<%= f.input :body, as: :kindeditor, label: false, input_html: {simple_mode: true, width: 500, height: 300 }, :validate => {presence: true}  %>
     <%= f.input :tag_list, label: '标签' %>
 
-    <%= f.button :wrapped, value: '创建', :cancel => me_posts_path %>
+    <%= f.button :wrapped, value: '创建', :cancel => me_posts_path, disable_with: "正在提交..." %>
 <% end %>
