--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -4,8 +4,9 @@
 }
 
 .meta{
-    line-height: 30px;
-    
+    height: 30px;
+    border-bottom: dashed 1px #ccc;
+    padding-bottom: 3px;
 }
 
 .meta ul{
@@ -28,20 +29,10 @@
     color: #bbbbbb;
 }
 
-div.meta{
-    margin-top: 5px;
-    margin-bottom: 15px; 
-}
-
-.meta a, .archive-month .tags a{
+.meta a{
     background-color: #E0EAF1;
-    border-bottom: 1px solid #3E6D8E;
-    border-right: 1px solid #7F9FB6;
     color: #3E6D8E;
-    font-size: 90%;
-    line-height: 2.4;
-    margin: 2px 2px 2px 0;
-    padding: 3px 6px;
+    padding: 6px;
     text-decoration: none;
     white-space: nowrap;
 }
@@ -100,7 +91,6 @@ input, textarea, select, .uneditable-input {
     border-top: solid 1px #aaaaaa;
 }
 .post{
-    border-bottom: dashed 1px #ccc;
     margin-bottom: 10px;
 }
 .datetime select{
