--- a/app/views/layouts/group.html.erb
+++ b/app/views/layouts/group.html.erb
@@ -20,6 +20,6 @@
       </div>
 
     </div> <!-- /container -->
-    <%= render 'footer' %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
