--- a/app/views/layouts/_account.html.erb
+++ b/app/views/layouts/_account.html.erb
@@ -4,7 +4,7 @@
 		<%=link_to '我的主页', me_path %>
 	</li>
 	<li>
-		<%= link_to '个人设置', edit_user_registration_path %>
+		<%= link_to '个人设置', me_settings_path %>
 	</li>
 	<li class='divider'></li>
 	<li>
