--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,7 @@
 <%= tabs_tag(:namespace => :site_nav, :open_tabs => {:id => "site_nav", :class => "nav" }, :builder => MenuTabBuilder) do |tab| %>
   <%= tab.index '首页', root_path %>
   <%= tab.index '分享', posts_path %>
-  <%= tab.index '问答', schools_path %>
+  <%= tab.question '问答', questions_path %>
   <%= tab.course '课程', courses_path %>
   <%= tab.index '群组', groups_path %>
   <%= tab.index '班级', groups_path %>
