--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
   </head>
   <body>
     <%= render "layouts/header" %>
-    <div class="page container">
-        <div class="content">
+    <div id='page' class="container">
+        <div class="row">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
