--- a/app/views/layouts/me.html.erb
+++ b/app/views/layouts/me.html.erb
@@ -5,15 +5,14 @@
   </head>
   <body>
     <%= render "layouts/header" %>
-    <div class="page container">
-      <div class="content">
+    <div id="page" class="container">
+      <div class="row">
         <%= bootstrap_flash %>
-        <div class='left'>
+        <div class='span2'>
           <%= render 'users/profile' %>
           <%= render 'me/menu' %>
         </div>
-
-        <div class='right'>
+        <div class='span10'>
           <%= yield %>
         </div>
       </div>
