--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,1 +1,15 @@
-
+<div class='row'>
+  <div class="span7">
+    <h3><%= @group.name %></h3>
+    <p><%= @group.body %></p>
+  </div>
+  
+  <div class='span2 pull-right'>  
+    <%- if @group_member %>
+      <%= link_to "添加话题", new_group_group_topic_path(@group), class: 'btn btn-info pull-right span' %>
+      <%= link_to "共享文件", new_group_group_medium_path(@group), class: 'btn btn-sucess pull-right span' %>
+    <% else %>
+      <%= link_to "申请加入", apply_group_path(@group), remote: true, class: 'btn btn-info pull-right' %>
+    <% end %>
+  </div>
+</div>
