--- a/app/views/layouts/group.html.erb
+++ b/app/views/layouts/group.html.erb
@@ -4,21 +4,19 @@
     <%= render 'layouts/head' %>
   </head>
   <body>
-
     <%= render "layouts/header" %>
-    <div class="page container">
-      <div class='left'>
-        <%= image_tag avatar_url(@group) %>
-        <h3><%= @group.name %></h3>
-        <p><%= @group.body %></p>
-      </div>
+    <div id="page" class="container">
+      <div class="row">
+        <div class='span2'>
+          <div class='avatar'><%= link_to image_tag(avatar_url(@group, 'b')), @group %></div>
+          <%= render 'group/nav' %>
+        </div>
 
-      <div class='right'>
-        <%= bootstrap_flash %>
-        <%= render 'group/nav' %>
-        <%= yield %>
+        <div class='span10'>
+          <%= bootstrap_flash %>
+          <%= yield %>
+        </div>
       </div>
-
     </div> <!-- /container -->
     <%= render 'layouts/footer' %>
   </body>
